1.Using flask-wtf and flask-bootstrap to render a form. 2.Handle a web form using GET and POST request method.

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
 {% block scripts %}
 {{ super() }}
 {{ moment.include_moment() }}
+{{ moment.locale('en') }}
 {% endblock %}
 
 <!-- Navigation bar-->
