--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,18 +1,17 @@
 {% extends 'base.html' %}
-{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block title %}Flasky{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Hello, {% if name %}{{ name }}!{% else %}Stranger!{% endif %}</h1>
-    {% if not known %}
-    <p>Pleased to meet you!</p>
+    <!-- Greeting the logged in user -->
+    <h1>Hello,
+    {% if current_user.is_authenticated %}
+        {{ current_user.username }}
     {% else %}
-    <P>Happy to see you again!</P>
-    {% endif %}
+        Stranger
+    {% endif %}!</h1>
     <p>The local date and time is {{ moment(current_time).format('LLL') }}</p>
     <p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
 </div>
-{{ wtf.quick_form(form) }}
 {% endblock %}
