--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,6 +35,14 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
+                <!-- Add link to profile page in the navigation bar -->
+                {% if current_user.is_authenticated %}
+                <li>
+                    <a href="{{ url_for('main.user', username=current_user.username) }}">
+                        Profile
+                    </a>
+                </li>
+                {% endif %}
             </ul>
             <!-- Login and logout navigation bar links -->
             <ul class="nav navbar-nav navbar-right">
