--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -3,6 +3,8 @@
 
 {% block page_content %}
 <div class="page-header">
+    <img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}">
+    <div class="profile-header">
     <h1>{{ user.username }}</h1>
     {% if user.name or user.location %}
     <p>
@@ -34,5 +36,6 @@
         Edit Profile [Admin]
     </a>
     {% endif %}
+    </div>
 </div>
 {% endblock %}
