Blog posts on profile pages. 	1.Profile page route with blog posts. 	2.Profile page template with blog posts.

--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -36,6 +36,8 @@
         Edit Profile [Admin]
     </a>
     {% endif %}
+    <h3>Posts by {{user.username }}</h3>
+    {% include '_posts.html' %}
     </div>
 </div>
 {% endblock %}
