Rendering in pages. 	1.Paginating the blog post list. 	2.Adding a pagination widget. 		1.Pagination template macro. 		2.Pagination footer for blog post lists.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,7 @@
 <!-- Home page template with blog posts -->
 {% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
+{% import '_macros.html' as macros %}
 
 {% block title %}Flasky{% endblock %}
 
@@ -15,4 +16,7 @@
     {% endif %}
 </div>
 {% include '_posts.html' %}
+<div class="pagination">
+    {{ macros.pagination_widget(pagination, '.index') }}
+</div>
 {% endblock %}
