--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% import '_macros.html' as macros %}
 {% block title %}Flasky - {{ user.username }}{% endblock %}
 
 {% block page_content %}
@@ -38,6 +39,9 @@
     {% endif %}
     <h3>Posts by {{user.username }}</h3>
     {% include '_posts.html' %}
+    <div class="pagination">
+        {{ macros.pagination_widget(pagination, '.index') }}
+    </div>
     </div>
 </div>
 {% endblock %}
