Using flask pagedown. 	1.Flask-PageDown initializition. 	2.Markdown enabled post form. 	3.Flask-PageDown template declaration.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,3 +20,9 @@
     {{ macros.pagination_widget(pagination, '.index') }}
 </div>
 {% endblock %}
+
+<!-- Flask-PageDown template declaration -->
+{% block scripts %}
+{{ super() }}
+{{ pagedown.include_pagedown() }}
+{% endblock %}
