Permanent links to blog posts. 	1.Enabling permanent link to posts. 	2.Adding Permanant links to posts. 	3.Permanent link template.

--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -17,6 +17,12 @@
                     {{ post.body }}
                 {% endif %}
             </div>
+            <!-- Adding permanent links to posts -->
+            <div class="post-footer">
+                <a href="{{ url_for('.post', id=post.id) }}">
+                    <span class="label label-default">Permalink</span>
+                </a>
+            </div>
         </div>
     </li>
     {% endfor %}
