Comments. 	1.Comment model. 	2.One-to-many relationships from users and posts to comments. 	3.Comment input form. 	4.Blog post comment support (endpoint). 	5.Links to blog post comments.

--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -19,9 +19,6 @@
             </div>
             <!-- Adding permanent links to posts -->
             <div class="post-footer">
-                <a href="{{ url_for('.post', id=post.id) }}">
-                    <span class="label label-default">Permalink</span>
-                </a>
                 <!-- Adding the edit blog post link-->
                 {% if current_user == post.author %}
                 <a href="{{ url_for('.edit', id=post.id) }}">
@@ -31,7 +28,13 @@
                 <a href="{{ url_for('.edit', id=post.id) }}">
                     <span class="label label-danger">Edit [Admin]</span>
                 </a>      
-                {% endif %}          
+                {% endif %}  
+                <a href="{{ url_for('.post', id=post.id) }}">
+                    <span class="label label-default">Permalink</span>
+                </a>
+                <a href="{{ url_for('.post', id=post.id) }}#comments">
+                    <span class="label label-primary">{{ post.comments.count() }} Comments</span>
+                </a>        
             </div>
         </div>
     </li>
