--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,6 +38,10 @@
             </ul>
             <!-- Login and logout navigation bar links -->
             <ul class="nav navbar-nav navbar-right">
+                <!-- Moderate comments link in the navigation bar -->
+                {% if current_user.can(Permission.MODERATE) %}
+                <li><a href="{{ url_for('main.moderate') }}">Moderate Comments</a></li>
+                {% endif %}
                 {% if current_user.is_authenticated %}
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
